app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require 'masonry/transitions'
 *= require 'masonry/basic'
 *= require_tree .
 *= require_self
 */

 @import 'bootstrap-sprockets';
 @import 'bootstrap';

 @font-face {
    font-family: 'LemonMilk';
    font-style: normal;
    font-weight: 700;
    src: local('LemonMilk'), local('LemonMilk'), url('LemonMilk.otf') format('truetype')
  }

  @font-face {
     font-family: 'Apercu-Mono';
     font-style: normal;
     font-weight: 700;
     src: local('Apercu-Mono'), local('Apercu-Mono'), url('Apercu-Mono.otf') format('truetype')
   }

 body {
   background-image: url('undies.jpg');
   background-size: 300px;
   background-repeat: repeat;
}

#about-body {
  width: 100%;
  background-color: #a300cc;
  margin-top: 50px;
  margin-bottom: 80px;
  box-sizing: border-box;
  padding: 20px;
  display: inline-block;
  color: white;
  position: relative;
}

.profile-pic {
  width: 20%;
  border-radius: 5px;
  float: left;
  margin-top: 1.5%
}

.about-text {
  float: left;
  box-sizing: border-box;
  padding: 10px 20px;
  width: 80%;
  position: relative;
  margin-top: -15px;
  p {
    font-size: 17px;
  }
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 100;
  font-family: Apercu-Mono;
}

nav {
	box-shadow: 0 1px 2px 0 rgb(163, 0, 204);
  height: 100px;
  box-sizing: border-box;
	.navbar-brand {
		img {
      width: 55px;
      float: left;
      margin-left: 30px;
      cursor: pointer;
		}
	}
}

nav.navbar.navbar-default {
  background-color: #a300cc;
  margin-bottom: 0;
  padding-bottom: 0;
}

nav.navbar.navbar-default li > a {
  color: white;
  letter-spacing: 1px;
  font-size: 20px;
  padding-left: 25px;
  font-family: Apercu-Mono;
}

.nav.navbar-nav.navbar-right {
  margin-top: 25px;
}

.footer {
  box-shadow: 0 1px 2px 0 rgb(163, 0, 204);
  border-top: 1px solid #e7e7e7;
  width: 100%;
  background-image: url('stickfigures.jpg');
  background-repeat: repeat;
  background-size: 350px;
  margin-top: 80px;
  text-align: center;
  padding-bottom: 30px;
}

#pins {
  margin: 0 auto;
  width: 100%;
  .box {
	  margin: 10px;
	  width: 350px;
	  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
	  border-radius: 7px;
	  text-align: center;
    box-sizing: border-box;
    padding: 10px;
	  img {
	  	max-width: 100%;
	  	height: auto;
	  }
	  h2 {
	  	font-size: 22px;
	  	margin: 0;
	  	padding: 25px 10px;

	  	a {
				color: #474747;
	  	}
	  }
	  .user {
	  	font-size: 12px;
	  	border-top: 1px solid #EAEAEA;
			padding: 15px;
			margin: 0;
	  }
	}
}

#edit_page {
	.current_image {
		img {
			display: block;
			margin: 20px 0;
		}
	}
}

#pin_show {
  margin-top: 25px;
	.panel-heading {
    padding: 20px;
	}
	.pin_image {
		img {
			max-width: 100%;
			width: 100%;
			display: block;
			margin: 0 auto;
		}
	}
	.panel-content {
    margin: 25px;
		.description {
			color: #868686;
			line-height: 1.75;
		}
	}
	.panel-footer {
		padding: 20px 35px;
		p {
			margin: 0;
		}
		.user {
			padding-top: 8px;
		}
	}
}

.show-title {
  color: #474747;
  font-size: 30px;
  text-align: left;
  margin: 0;
  margin-bottom: 10px;
}

textarea {
	min-height: 250px;
}

.header {
  width: 100%;
  background-image: url('header3.jpg');
  background-size: cover;
  background-position: center;
  height: 700px;
  display: inline-block;
}

h1 {
  text-align: center;
  margin-top: 25%;
  font-size: 120px;
  color: white;
  font-family: LemonMilk;
  text-transform: uppercase;
  margin-left: 0px;
  margin-right: 0px;
}

h2 {
  font-family: LemonMilk;
}

.button {
  text-decoration: none;
  box-sizing: border-box;
  padding: 10px;
  padding-left: 150px;
  text-align: left;
  background-color: #f84a21;
  font-family: LemonMilk;
  color: white;
  font-size: 30px;
  display: block;
  margin-top: 1em;
  margin-bottom: 10px;
  cursor: pointer;
}

.footer-button {
  text-decoration: none;
  box-sizing: border-box;
  padding: 10px;
  text-align: center;
  background-color: #a300cc;
  font-family: LemonMilk;
  color: white;
  font-size: 30px;
  display: inline-block;
  margin: 10px;
  width: 250px;
  cursor: pointer;
}

.footer-container {
  width: 100%;
  margin-top: 2.5em;
  margin-bottom: 0.5em;
  text-align: center;
}

.email {
  font-family: LemonMilk;
  background-color: #f84a21;
  color: white;
  font-size: 18px;
  max-width: 525px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding: 10px 0;

}

.about-intro::after {
    content: "";
    display: table;
    clear: both;
}

.leg {
  position: absolute;
  top: 185px;
  right: 325px;
}

.foot {
  position: absolute;
  top: 185px;
  right: 100px;
}

.ball {
  display: block;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  box-shadow: inset -5px -5px 5px rgba(0,0,0,.6), 15px 15px 2px rgba(0,0,0,.04);
  position: absolute;
  @-webkit-keyframes moveX {
    from { left: 0; } to { left: 95%; }
  }
  @-moz-keyframes moveX {
    from { left: 0; } to { left: 95%; }
  }
  @keyframes moveX {
    from { left: 0; } to { left: 95%; }
  }

  -webkit-animation: moveX 5s linear 0s infinite alternate;
  -moz-animation: moveX 5s linear 0s infinite alternate;
  animation: moveX 5s linear 0s infinite alternate;

  @-webkit-keyframes moveY {
    from { top: 0; } to { top: 130%; }
  }
  @-moz-keyframes moveY {
    from { top: 0; } to { top: 130%; }
  }
  @keyframes moveY {
    from { top: 0; } to { top: 130%; }
  }
}

.ball-animation1 {
  animation: moveX 5.05s linear 0s infinite alternate,
  moveY 7.4s linear 0s infinite alternate;
}

.ball-animation2 {
  animation: moveX 5.7s linear 0s infinite alternate,
  moveY 4.4s linear 0s infinite alternate;
}

.ball-animation3{
  animation: moveX 6.5s linear 0s infinite alternate,
  moveY 5.4s linear 0s infinite alternate;
}

.ball-animation4 {
  animation: moveX 5.05s linear 0s infinite alternate,
  moveY 6.4s linear 0s infinite alternate;
}

.ball-animation5 {
  animation: moveX 2.05s linear 0s infinite alternate,
  moveY 5.4s linear 0s infinite alternate;
}

.ball-animation6 {
  animation: moveX 4.05s linear 0s infinite alternate,
  moveY 5.4s linear 0s infinite alternate;
}

.ball-animation7 {
  animation: moveX 7.05s linear 0s infinite alternate,
  moveY 6.4s linear 0s infinite alternate;
}

.ball-animation8 {
  animation: moveX 4.05s linear 0s infinite alternate,
  moveY 2.4s linear 0s infinite alternate;
}

.ball-animation9 {
  animation: moveX 7.05s linear 0s infinite alternate,
  moveY 3.4s linear 0s infinite alternate;
}

.ball-animation10 {
  animation: moveX 6.05s linear 0s infinite alternate,
  moveY 1.4s linear 0s infinite alternate;
}

@media (max-width: 1000px) {
  .leg {
    top: 275px;
    right: 180px;
    width: 175px;
  }
  .foot {
    top: 275px;
    right: 0;
    width: 150px;
  }
  .header {
    background-image: url('header5.jpg');
    height: 600px;
  }
}


@media (max-width: 700px) {
  .profile-pic {
    width: 30%;
    margin-left: 20px;
  }
  .about-text {
    width: 100%;
  }
  .button {
    text-align: center;
    padding-left: 0px;
  }
  .foot {
    display: none;
  }
  .leg {
    display: none;
  }
  h1 {
    font-size: 65px;
  }
  nav {
    .navbar-brand {
      img {
        width: 35px;
        margin-left: 15px;
      }
    }
  }
  nav.navbar.navbar-default li > a {
    letter-spacing: 1px;
    font-size: 12px;
    padding-left: 15px;
    float: right;
  }
}

